[metadata]
name = smart-microscopy-mini
author = Jan Woyzichovski
author_email = jan.woyzichovski@uni-greifswald.de
license = BSD-3
url = https://github.com/JanWoyzi/smart-microscopy-mini
description = its just a test
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/JanWoyzi/smart-microscopy-mini/issues
    Documentation = 'https://github.com/JanWoyzi/smart-microscopy-mini#README.md'
    Source Code = https://github.com/JanWoyzi/smart-microscopy-mini
    User Support = https://github.com/JanWoyzi/smart-microscopy-mini/issues

[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy


[options.entry_points] 
napari.plugin = 
    smart-microscopy-mini = smart_microscopy_mini
